# CICDCPPTest

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  release.yml
include/: add.h
src/: add.cpp  main.cpp
test/: test.cpp
